Fix: Styles misalignment

--- a/css/contacto.css
+++ b/css/contacto.css
@@ -25,6 +25,9 @@ main {
 .ciudad::marker {
     content: "📍";
 }
+footer {
+    position: relative;
+}
 @media screen and (min-width: 1000px){
     .info {
         display: grid;
