--- a/css/styles.css
+++ b/css/styles.css
@@ -43,9 +43,9 @@ h3 {
   font-weight: bold;
 }
 body {
-  background-color: palevioletred;
+  
   width: 100%;
-  height: 100vh;
+  
   margin: 0;
   padding: 0;
   display: flex;
@@ -66,8 +66,7 @@ main {
 }
 footer {
   max-height: fit-content;
-  margin-top: 2em;
-  margin-bottom: 2em;
+
   position: relative;
   text-align: center;
   background-color: palevioletred;
@@ -111,7 +110,7 @@ background: radial-gradient(circle, rgba(238, 221, 174, 0.4) 0%, rgba(237, 203, 
   background-color: pink;
 }
 .icono {
-    margin: 0 1em;
+  padding: 0 1em;
   width: fit-content;
   font-weight: 600;
   box-sizing: border-box;
